add target _blank to open links on another page without leaving it

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
         >
       </p>
       <p>
-        <a href="https://www.linkedin.com/in/christiand3v"
+        <a href="https://www.linkedin.com/in/christiand3v"  target="_blank"
           >Linkedin: Christian d3v</a
         >
       </p>
-      <p><a href="https://github.com/christiand3v">GitHub: Christian d3v</a></p>
+      <p><a href="https://github.com/christiand3v" target="_blank">GitHub: Christian d3v</a></p>
       <p><strong> Camaquã- Rs, Brasil </strong></p>
       </div>
     
