--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <div id="container">
+
     <div id="content">
       <header>
         <h1>Christian Medeiros</h1>
@@ -168,5 +170,7 @@
         >
       </p>
     </div>
+  </div>
+
   </body>
 </html>
