troca de username

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="content">
       <header>
-        <h1>Christian Medeiros</h1>
+        <h1>Christian Janke</h1>
         <h4> Programador Front-End Júnior
         </h4>
       </header>
@@ -90,7 +90,7 @@
           <h4>
             Crud (Create-Read-Update- Delete)
             <a
-              href="https://github.com/christiand3v/Crud-NodeJs"
+              href="https://github.com/christianmedeirosjanke/Crud-NodeJs"
               target="_blank"
               >Site</a
             >
@@ -106,16 +106,16 @@
     <div id="sidebar">
       <div id="contacts">
           <p>
-        <a href="https://www.mailto:christiand3v@outlook.com"
-          >Email: christiand3v@gmail.com</a
+        <a href="https://www.mailto:Christianmjanke@gmail.com"
+          >Email:christianmjanke@gmail.com</a
         >
       </p>
       <p>
-        <a href="https://www.linkedin.com/in/christiand3v"  target="_blank"
-          >Linkedin: Christian d3v</a
+        <a href="https://www.linkedin.com/in/Christianmjanke"  target="_blank"
+          >Linkedin: Christianmjanke</a
         >
       </p>
-      <p><a href="https://github.com/christiand3v" target="_blank">GitHub: Christian d3v</a></p>
+      <p><a href="https://github.com/Christianmjanke" target="_blank">GitHub: Christianmjanke</a></p>
       <p><strong> Camaquã- Rs, Brasil </strong></p>
       </div>
     
